--- a/www/templates/member.html
+++ b/www/templates/member.html
@@ -1,4 +1,4 @@
-<ion-view view-title="會員資料" ng-controller="MemberCtrl">
+<ion-view view-title="會員資料" ng-controller="MemberCtrl" ng-init="initialize()">
   <ion-content>
     <ion-refresher on-refresh="doRefresh()" pulling-text="重新整理"></ion-refresher>
     <div class="list">
@@ -7,36 +7,36 @@
       </div>
       <label class="item item-input">
         <i class="icon ion-android-contact margin-right-10 text-align-center"></i>
-        <span class="input-label">帳號</span> {{account}}
+        <span class="input-label">帳號</span> {{user.account}}
       </label>
       <label class="item item-input">
         <i class="icon ion-locked margin-right-10 text-align-center"></i>
-        <span class="input-label">密碼</span> {{password}}
+        <span class="input-label">密碼</span> {{user.password}}
       </label>
       <label class="item item-input">
         <i class="icon ion-android-person margin-right-10 text-align-center"></i>
-        <span class="input-label">姓名</span> {{name}}
+        <span class="input-label">姓名</span> {{user.name}}
       </label>
       <label class="item item-input">
         <i class="icon ion-email margin-right-10 text-align-center"></i>
-        <span class="input-label">E-mail</span> {{email}}
+        <span class="input-label">E-mail</span> {{user.email}}
       </label>
       <label class="item item-input">
         <i class="icon ion-iphone margin-right-10 text-align-center"></i>
-        <span class="input-label">手機</span> {{cellphone}}
+        <span class="input-label">手機</span> {{user.cellphone}}
       </label>
       <!--<input id="edit_button" type="button" value="修改資料" class="button button-calm home_button" ng-click="editMember()">-->
-    
+
       <div class="item item-divider margin-0 font-size-18">
         <i class="ion-android-call margin-right-10 color-A8BF7C font-size-22"></i>緊急聯絡人
       </div>
       <label class="item item-input">
         <i class="icon ion-android-person margin-right-10 text-align-center"></i>
-        <span class="input-label">聯絡人姓名</span> {{contact_name}}
+        <span class="input-label">聯絡人姓名</span> {{user.contact_name}}
       </label>
       <label class="item item-input">
         <i class="icon ion-iphone margin-right-10 text-align-center"></i>
-        <span class="input-label">聯絡人電話</span> {{contact_cel}}
+        <span class="input-label">聯絡人電話</span> {{user.contact_cel}}
       </label>
 
     </div>
